--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "task-2",
+  "name": "GamerMining",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "sass": "^1.51.0",
+    "sass-loader": "^10.2.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
