--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "sass-loader": "^10.2.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vue3-lottie": "^2.1.0"
+    "vue3-lottie": "^2.1.0",
+    "vue3-select2-component": "^0.1.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.6",
