--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "task-2",
+  "name": "GamerMining",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,9 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vueform/multiselect": "^2.3.3",
+    "@vuelidate/core": "^2.0.0-alpha.41",
+    "@vuelidate/validators": "^2.0.0-alpha.29",
+    "axios": "^0.27.2",
     "core-js": "^3.6.5",
+    "sass": "^1.51.0",
+    "sass-loader": "^10.2.1",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "vue3-lottie": "^2.1.0",
+    "vue3-select2-component": "^0.1.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.6",
